# lm_studio_ros2_connector

./: README.md  package.xml  setup.py  tree.txt
launch/: lm_studio.launch.py
lm_studio_connector/: doc.html  lm_studio_client.py  lm_studio_doc.html  lm_studio_docs.html  lm_studio_node.py  package.xml  setup.cfg  setup.py
lm_studio_connector/launch/: lm_studio.launch.py  lm_studio_topics.launch.py
lm_studio_connector/lm_studio_connector/: lm_studio_client.py  lm_studio_node.py  lm_studio_topics_node.py  run_tests.sh  test_integration.py  test_lm_studio_client.py
lm_studio_connector/lm_studio_ros2_connector/: __init__.py
lm_studio_connector/script/: minimal_run.py  minimal_run2.py
lm_studio_connector/test/: test_lm_studio_client.py  test_lm_studio_ros_node.py
lm_studio_interfaces/: CMakeLists.txt  package.xml
lm_studio_interfaces/action/: ChatCompletion.action  TextCompletion.action
lm_studio_interfaces/srv/: GetEmbeddings.srv  ListModels.srv
